2009-08-05  Li Feng  <nemokingdom@gmail.com>

	* graphite-sese-to-poly.c (build_pbb_drs): Remove build alias set
	for each poly_bb_p.
	(build_scop_drs): Build alias set for each SCoP.

2009-08-04  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi (MIPS Options): Document new 1004K -march options.
	* config/mips/mips.c (mips_cpu_info_table): Add 1004K cores.
	* config/mips/mips.h (MIPS_ISA_LEVEL_SPEC): Add pattern for 1004K.
	(MIPS_ARCH_FLOAT_SPEC): Likewise.
	(BASE_DRIVER_SELF_SPECS): Likewise.

2009-08-04  Andrew Pinski  <pinskia@gmail.com>

	* tree-ssa-alias.c: Fix some comment typos.

2009-08-04  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/linux-atomic.asm (ATOMIC_BOOL_COMPARE_AND_SWAP,
	ATOMIC_OP_AND_FETCH, ATOMIC_COMBOP_AND_FETCH): Define.

2009-08-03  Janis Johnson  <janis187@us.ibm.com>

	PR c/39902
	* simplify-rtx.c (simplify_binary_operation_1): Disable
	simplifications for decimal float operations.

2009-08-03  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40943
	* tree-ssa.c (warn_uninitialized_var): Even on LHS warn for
	operand of INDIRECT_REF.

2009-08-03  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_legitimate_constant_p): Reject CONST
	constants referencing TLS symbols.

2009-08-03  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>

	* config/sh/linux-atomic.asm (ATOMIC_COMPARE_AND_SWAP): Rename
	__sync_compare_and_swap_* to __sync_val_compare_and_swap_*.

2009-08-03  Richard Guenther  <rguenther@suse.de>

	* tree.c (make_vector_type): Build a main variant first,
	get the canonical one and then build the variant.
	* tree-ssa.c (useless_type_conversion_p_1): Handle
	fixed-point types.
	(useless_type_conversion_p): Conversions to pointers to
	incomplete record types are useless.

2009-08-03  Richard Guenther  <rguenther@suse.de>

	* tree-cfg.c (pass_warn_unused_result): Mark name that no dump
	file will be created.
	* omp-low.c (pass_diagnose_omp_blocks): Likewise.
	* toplev.c (compile_file): Adjust comment.
